refactor: updated controller tests