@@ -1,6 +1,6 @@
 package org.example.task5.controller.location;
 
-
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.example.task5.dto.location.LocationCreateDto;
 import org.example.task5.dto.location.LocationUpdateDto;
 import org.example.task5.exception.LocationNotExistException;
@@ -8,186 +8,165 @@ import org.example.task5.model.Location;
 import org.example.task5.service.KudaGoService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.MediaType;
+import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.eq;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@ExtendWith(MockitoExtension.class)
+@WebMvcTest(LocationController.class)
 class LocationControllerTest {
 
-    @Mock
+    @Autowired
+    private MockMvc mockMvc;
+
+    @Autowired
+    private ObjectMapper objectMapper;
+
+    @MockBean
     private KudaGoService<String, Location, LocationCreateDto, LocationUpdateDto> locationService;
 
-    @InjectMocks
-    private LocationController locationController;
-
-
-    Location location1;
-    LocationCreateDto locationCreateDto1;
-    LocationUpdateDto locationUpdateDto1;
-    Location location2;
-    LocationCreateDto locationCreateDto2;
-    LocationUpdateDto locationUpdateDto2;
+    private Location location;
 
     @BeforeEach
-    void before() {
-        location1 = new Location("location-1", "Location 1");
-        locationCreateDto1 = new LocationCreateDto("location-1", "Location 1");
-        locationUpdateDto1 = new LocationUpdateDto("updatedLocation-1", "updatedLocation 1");
-
-        location2 = new Location("location-2", "Location 2");
-        locationCreateDto2 = new LocationCreateDto("location-2", "Category 2");
-        locationUpdateDto2 = new LocationUpdateDto("updatedLocation-2", "updatedLocation 2");
+    void setUp() {
+        // Initialize a Location object with slug and name
+        location = new Location("test-location", "Test Location");
     }
 
     @Test
-    void getAll_notEmptyDatasource_shouldReturnNotEmptyList() {
-        // Arrange
-        List<Location> categories = Arrays.asList(location1, location2);
-        when(locationService.getAll()).thenReturn(categories);
+    void getAllLocations_shouldReturnAllLocations() throws Exception {
+        when(locationService.getAll()).thenReturn(List.of(location));
 
-        // Act
-        List<Location> result = locationController.getAll();
+        mockMvc.perform(get("/api/v1/locations"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$[0].slug").value(location.slug()))
+                .andExpect(jsonPath("$[0].name").value(location.name()));
 
-        // Assert
-        assertEquals(2, result.size());
-        assertTrue(result.contains(location1));
-        assertTrue(result.contains(location2));
-        verify(locationService).getAll();
-    }
-
-
-    @Test
-    void getAll_emptyDatasource_shouldReturnEmptyList() {
-        // Arrange
-        when(locationService.getAll()).thenReturn(List.of());
-
-        // Act
-        List<Location> result = locationController.getAll();
-
-        // Assert
-        assertEquals(0, result.size());
         verify(locationService).getAll();
     }
 
     @Test
-    void getById_existingId_shouldReturnCategory() {
-        // Arrange
-        String id = "location-1";
-        when(locationService.getById(id)).thenReturn(location1);
+    void getLocationBySlug_shouldReturnLocation_whenLocationExists() throws Exception {
+        String slug = "test-location";
+        when(locationService.getById(slug)).thenReturn(location);
 
-        // Act
-        Location result = locationController.getById(id);
+        mockMvc.perform(get("/api/v1/locations/{slug}", slug))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.slug").value(location.slug()))
+                .andExpect(jsonPath("$.name").value(location.name()));
 
-        // Assert
-        assertEquals(location1, result);
-        verify(locationService).getById(id);
+        verify(locationService).getById(slug);
     }
 
     @Test
-    void getById_notExistingId_shouldThrowException() {
-        // Arrange
-        String id = "location-99";
+    void getLocationBySlug_shouldReturnNotFound_whenLocationDoesNotExist() throws Exception {
+        String slug = "non-existent-location"; // Assuming this slug does not exist
+        when(locationService.getById(slug)).thenThrow(new LocationNotExistException("Location not found"));
 
-        when(locationService.getById(id)).thenThrow(new LocationNotExistException("Location with id " + id + " does not exist"));
+        mockMvc.perform(get("/api/v1/locations/{id}", slug))
+                .andExpect(status().isNotFound())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.exceptionName").value("LocationNotExistException"))
+                .andExpect(jsonPath("$.exceptionMessage").value("Location not found"));
 
-        // Act & Assert
-        var exception = assertThrows(LocationNotExistException.class, () -> {
-            locationController.getById(id);
-        });
-
-        assertEquals("Location with id location-99 does not exist", exception.getMessage());
-        verify(locationService).getById(id);
+        verify(locationService).getById(slug);
     }
 
     @Test
-    void create_shouldReturnCreatedCategory() {
-        // Arrange
-        when(locationService.create(locationCreateDto1)).thenReturn(location1);
+    void createANewLocation_shouldCreateLocation() throws Exception {
+        LocationCreateDto createDto = new LocationCreateDto("new-location", "New Location");
+        Location createdLocation = new Location(createDto.slug(), createDto.name());
 
-        // Act
-        Location result = locationController.create(locationCreateDto1);
+        when(locationService.create(any(LocationCreateDto.class))).thenReturn(createdLocation);
 
-        // Assert
-        assertEquals(locationCreateDto1.name(), result.name());
-        assertEquals(locationCreateDto1.slug(), result.slug());
-        verify(locationService).create(locationCreateDto1);
+        mockMvc.perform(post("/api/v1/locations")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(createDto)))
+                .andExpect(status().isCreated())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.slug").value(createdLocation.slug()))
+                .andExpect(jsonPath("$.name").value(createdLocation.name()));
+
+        verify(locationService).create(createDto);
     }
 
     @Test
-    void update_existingId() {
-        // Arrange
-        String id = "location-1";
+    void updateAnExistingLocation_shouldUpdateLocation() throws Exception {
+        String slug = "test-location";
+        LocationUpdateDto updateDto = new LocationUpdateDto("updated-location", "Updated Name");
 
-        when(locationService.update(id, locationUpdateDto1)).thenReturn(new Location(locationUpdateDto1.slug(), locationUpdateDto1.name()));
+        when(locationService.update(eq(slug), any(LocationUpdateDto.class)))
+                .thenReturn(new Location(updateDto.slug(), updateDto.name()));
 
-        // Act
-        Location result = locationController.update(id, locationUpdateDto1);
+        mockMvc.perform(put("/api/v1/locations/{id}", slug)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(updateDto)))
+                .andExpect(status().isOk())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.slug").value(updateDto.slug()))
+                .andExpect(jsonPath("$.name").value(updateDto.name()));
 
-        // Assert
-        assertEquals(locationUpdateDto1.name(), result.name());
-        verify(locationService).update(eq(id), any());
+        verify(locationService).update(eq(slug), any(LocationUpdateDto.class));
     }
 
     @Test
-    void update_nonExistingId() {
-        // Arrange
-        String id = "location-99";
+    void updateAnExistingLocation_shouldReturnNotFound_whenLocationDoesNotExist() throws Exception {
+        String slug = "non-existent-location"; // Assuming this slug does not exist
+        LocationUpdateDto updateDto = new LocationUpdateDto("updated-location", "Updated Name");
 
-        when(locationService.update(eq(id), any())).thenThrow(new LocationNotExistException("Location with id " + id + " does not exist"));
+        when(locationService.update(eq(slug), any(LocationUpdateDto.class)))
+                .thenThrow(new LocationNotExistException("Location not found"));
 
-        // Act & Assert
-        var exception = assertThrows(LocationNotExistException.class, () -> {
-            locationController.update(id, locationUpdateDto1);
-        });
+        mockMvc.perform(put("/api/v1/locations/{id}", slug)
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(updateDto)))
+                .andExpect(status().isNotFound())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.exceptionName").value("LocationNotExistException"))
+                .andExpect(jsonPath("$.exceptionMessage").value("Location not found"));
 
-        assertEquals("Location with id location-99 does not exist", exception.getMessage());
-        verify(locationService).update(eq(id), any());
+        verify(locationService).update(eq(slug), any(LocationUpdateDto.class));
     }
 
     @Test
-    void delete_existingId() {
-        // Arrange
-        String id = "location-1";
+    void deleteALocationBySlug_shouldDeleteLocation() throws Exception {
+        String slug = "test-location";
 
-        when(locationService.delete(id)).thenReturn(location1);
+        mockMvc.perform(delete("/api/v1/locations/{id}", slug))
+                .andExpect(status().isNoContent());
 
-        // Act
-        locationController.delete(id);
-
-        // Assert
-        verify(locationService).delete(id);
-        verifyNoMoreInteractions(locationService);
+        verify(locationService).delete(slug);
     }
 
-
     @Test
-    void delete_nonExistingId() {
-        // Arrange
-        String id = "location-99";
+    void deleteALocationBySlug_shouldReturnNotFound_whenLocationDoesNotExist() throws Exception {
+        String slug = "non-existent-location";
+        doThrow(new LocationNotExistException("Location not found")).when(locationService).delete(slug);
 
-        doThrow(new LocationNotExistException("Location with id " + id + " does not exist")).when(locationService).delete(id);
+        mockMvc.perform(delete("/api/v1/locations/{slug}", slug))
+                .andExpect(status().isNotFound())
+                .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.exceptionName").value("LocationNotExistException"))
+                .andExpect(jsonPath("$.exceptionMessage").value("Location not found"));
 
-        // Act & Assert
-        var exception = assertThrows(LocationNotExistException.class, () -> {
-            locationController.delete(id);
-        });
-
-        assertEquals("Location with id location-99 does not exist", exception.getMessage());
-        verify(locationService).delete(id);
+        verify(locationService).delete(slug);
     }
 }
